--- a/client/src/components/navigation/toolbar/Toolbar.scss
+++ b/client/src/components/navigation/toolbar/Toolbar.scss
@@ -1,28 +1,16 @@
-.Toolbar {
+.toolbar__container {
     height: 56px;
     width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #703B09;
+    position: static;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     box-sizing: border-box;
     z-index: 90;
-}
 
-.Toolbar nav {
-    height: 100%;
-}
-
-.Logo {
-    height: 80%;
-}
-
-@media (max-width: 499px) {
-    .DesktopOnly {
-        display: none;
+    nav {
+        height: 100%;
+        width: 100%;
     }
 }
