--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -8,7 +8,8 @@ h1 {
 h2 {
     display: inline-block;
     margin-right: 10px;
-    font-size: 18pt;
+    font-size: 16pt;
+    line-height: 1.3;
     color: #483d2e;
 }
 
